--- a/day4/index.html
+++ b/day4/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Hidden Search</title>
+    <title>Hidden Search Widget</title>
   </head>
   <body>
     <div class="search">
